--- a/src/App.css
+++ b/src/App.css
@@ -101,16 +101,17 @@ input[type="text"] {
   padding: 10px;
   margin: 10px 0;
   box-shadow: 0 0 0px 0px rgba(51, 251, 251, 0.883);
-  border-radius: 10px;
-
+  border-radius: 19px;
   font-family: inherit;
   font-size: inherit;
+  width: 200px;
 }
 
 input[type="password"] {
   padding: 10px;
   box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
-  border-radius: 10px;
+  border-radius: 19px;
+  width: 250px;
 
   font-family: inherit;
   font-size: inherit;
@@ -127,7 +128,7 @@ button[type="submit"] {
 }
 
 select {
-  width: 50%;
+  width: 15%;
   padding: 10px;
   border-radius: 10px;
 }
@@ -137,7 +138,7 @@ input[type="number"] {
   margin: 10px 0;
   box-shadow: 0 0 0px 0px rgba(51, 251, 251, 0.883);
   border-radius: 10px;
-  width: 20%;
+  width: 10%;
 
   font-family: inherit;
   font-size: inherit;
@@ -150,7 +151,7 @@ input[type="submit"] {
   color: #fff;
   font-weight: 600;
   border-radius: 5px;
-  width: 30%;
+  width: 15%;
 }
 
 .dataloaded {
@@ -172,11 +173,19 @@ input[type="submit"] {
 } */
 
 .navBar {
+  padding: 10px;
+  border: none;
+  background-color: brown;
+  color: black;
+  font-weight: 600;
+  border-radius: 5px;
+  width: 30%;
   background-color: #f5f5f5;
   overflow: hidden;
   display: inline;
   margin-top: 5%;
   margin: 40px;
+  border-radius: 5px;
 }
 
 .navBar a {
@@ -194,6 +203,52 @@ input[type="submit"] {
 }
 
 .navBar a.active {
-  background-color: #a4c7a7;
+  background-color: #888888;
   color: white;
+}
+
+/* .title {
+  text-shadow: 2px 2px 2px rgb(8, 8, 8);
+  color: black;
+} */
+
+.title {
+  color: black;
+  text-decoration: none;
+}
+
+button[type="submit"]:hover {
+  color: white;
+  position: relative;
+}
+
+.title[data]:hover:after {
+  content: attr(data);
+  padding: 4px 8px;
+  color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  left: 0;
+  top: 100%;
+  white-space: nowrap;
+  z-index: 2;
+  border-radius: 5px;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.currency {
+  display: inline;
+}
+
+.button {
+  padding: 10px;
+  border: none;
+  background-color: #040802;
+  color: #fff;
+  font-weight: 600;
+  border-radius: 5px;
+  width: 10%;
+}
+
+body {
+  border-radius: 5px;
 }
