--- a/src/App.css
+++ b/src/App.css
@@ -179,12 +179,10 @@ input[type="submit"] {
   color: black;
   font-weight: 600;
   border-radius: 5px;
-  width: 30%;
   background-color: #f5f5f5;
   overflow: hidden;
   display: inline;
-  margin-top: 5%;
-  margin: 40px;
+  margin: 70px;
   border-radius: 5px;
 }
 
@@ -251,4 +249,14 @@ button[type="submit"]:hover {
 
 body {
   border-radius: 5px;
+}
+
+.about {
+  text-align: left;
+  margin: 10%;
+  /* margin-left: 50%; */
+}
+
+.welcome {
+  margin: 10%;
 }
